resources/tests/invalid_syntax/var_decl_uninit.ct
//`An uninitialized variable should specify its type!
//1
fn main()->i64 {
  var hello;
}